# Heurist-analyser

./: .gitignore  README.md  Workshop_LostMa.ipynb  pyproject.toml
lostma-db/: __init__.py  background.py
src/: lostma.py  main.py
src/lostma_db/: __init__.py  analyse.py  background.py  client.py  general.py  lostma.py  lostma_tables.py
