[project]
name = "heurist-analyser"
version = "0.1.0"
description = "Analyser for Heurist DB"
authors = [
    {name = "Virgile Reignier",email = "64497404+virgile-reignier@users.noreply.github.com"}
]
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "heurist-api (>=0.2.5,<0.3.0)",
    "duckdb (>=1.4.1,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
